changes in richeditorview class

--- a/app/src/main/res/layout/article_comment_replies_dialog.xml
+++ b/app/src/main/res/layout/article_comment_replies_dialog.xml
@@ -58,16 +58,20 @@
       android:visibility="visible">
 
 
-      <com.mycity4kids.widget.CustomFontEditText
+      <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/typeHere"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/space_10"
+        android:layout_toStartOf="@id/disableStatePostTextView"
+        android:background="@color/transparent"
         android:gravity="center_vertical"
         android:hint="Write a comment"
+        android:inputType="textMultiLine"
         android:maxLines="4"
-        android:padding="12dp"
+        android:padding="5dp"
+        android:scrollbars="vertical"
         android:textColor="#a1a4a8"
         android:textSize="18sp"
         android:visibility="visible"
