--- a/app/src/main/res/layout/new_article_layout.xml
+++ b/app/src/main/res/layout/new_article_layout.xml
@@ -124,7 +124,8 @@
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerView"
       android:layout_width="match_parent"
-      android:layout_height="match_parent" />
+      android:layout_height="match_parent"
+      android:background="@color/white"/>
   </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
   <com.mycity4kids.widget.CustomFontTextView
