--- a/app/src/main/res/layout/article_comment_replies_dialog.xml
+++ b/app/src/main/res/layout/article_comment_replies_dialog.xml
@@ -58,20 +58,18 @@
       android:visibility="visible">
 
 
-      <com.mycity4kids.widget.CustomFontTextView
+      <com.mycity4kids.tagging.ui.RichEditorView
         android:id="@+id/typeHere"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/space_10"
-        android:layout_toStartOf="@id/disableStatePostTextView"
-        android:background="@color/transparent"
         android:gravity="center_vertical"
+        android:layout_toStartOf="@id/disableStatePostTextView"
         android:hint="Write a comment"
-        android:inputType="textMultiLine"
         android:maxLines="4"
-        android:padding="5dp"
-        android:scrollbars="vertical"
+        android:background="@color/transparent"
+        android:padding="8dp"
         android:textColor="#a1a4a8"
         android:textSize="18sp"
         android:visibility="visible"
@@ -82,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/space_10"
+        android:layout_marginRight="@dimen/space_10"
         android:text="Be the first one"
         android:textColor="@color/groups.grey"
         android:textSize="12sp"
