--- a/app/src/main/res/layout/editor_view.xml
+++ b/app/src/main/res/layout/editor_view.xml
@@ -33,4 +33,13 @@
     android:layout_below="@+id/text_editor"
     android:visibility="gone" />
 
+  <androidx.appcompat.widget.AppCompatSpinner
+    android:id="@+id/spinner"
+    android:visibility="gone"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/text_editor"/>
+
+
+
 </merge>
