--- a/app/src/main/res/layout/users_bookmark_generic_item.xml
+++ b/app/src/main/res/layout/users_bookmark_generic_item.xml
@@ -153,20 +153,15 @@
             android:padding="10dp"
             android:src="@drawable/ic_share_white" />
 
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/removeBookmarkTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/shareImageView"
-            android:layout_marginEnd="20dp"
-            android:layout_toStartOf="@+id/shareImageView"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="4dp"
-            android:text="@string/user_activities.bookmarks.remove"
-            android:textColor="@color/app_red"
-            android:textSize="15sp"
-            app:fontName="oswald_regular.ttf" />
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/removeBookmarkTextView"
+      android:layout_width="@dimen/space_20"
+      android:layout_height="@dimen/space_25"
+      android:layout_alignTop="@+id/shareImageView"
+      android:layout_marginTop="@dimen/space_5"
+      android:layout_marginEnd="20dp"
+      android:layout_toStartOf="@+id/shareImageView"
+      android:background="@drawable/ic_bookmark_delete" />
 
         <!--<View-->
         <!--android:id="@+id/view12"-->
