--- a/app/src/main/res/layout/article_comment_replies_dialog.xml
+++ b/app/src/main/res/layout/article_comment_replies_dialog.xml
@@ -28,35 +28,66 @@
     app:fab_colorPressed="@color/app_red"
     app:fab_icon="@drawable/ic_add_comments" />
 
+  <View
+    android:layout_width="match_parent"
+    android:layout_height="0.5dp"
+    android:layout_above="@id/rLayout"
+    android:background="@color/dark_grey" />
 
   <RelativeLayout
     android:id="@+id/rLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
-    android:background="#f0f0f0"
-    android:elevation="5dp">
+    android:background="@color/white"
+    android:elevation="@dimen/space_5">
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-      android:id="@+id/userImageView"
-      android:layout_width="34dp"
-      android:layout_height="34dp"
-      android:layout_centerVertical="true"
-      android:layout_marginStart="@dimen/space_10"
-      android:src="@drawable/default_commentor_img" />
 
     <RelativeLayout
-      android:id="@+id/addCommentFAB"
+      android:layout_width="match_parent"
+      android:layout_height="50dp"
+      android:layout_alignBottom="@id/line"
+      android:background="#f0f0f0">
+
+      <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/userImageView"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="@dimen/space_10"
+        android:src="@drawable/default_commentor_img" />
+
+      <com.mycity4kids.widget.MomspressoButtonWidget
+        android:id="@+id/disableStatePostTextView"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="@dimen/space_10"
+        android:paddingStart="@dimen/space_20"
+        android:paddingTop="@dimen/space_10"
+        android:paddingEnd="@dimen/space_20"
+        android:paddingBottom="@dimen/space_10"
+        android:text="Post"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:fb_borderColor="#D8D8D8"
+        app:fb_borderWidth="1dp"
+        app:fb_defaultColor="@color/white_color"
+        app:fb_radius="@dimen/space_30"
+        app:fb_textColor="#D8D8D8"
+        app:fb_textSize="14sp" />
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+      android:id="@+id/r"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_centerVertical="true"
-      android:layout_marginLeft="10dp"
-      android:layout_marginRight="10dp"
-      android:layout_toEndOf="@id/userImageView"
-      android:background="@drawable/rectangular_border"
-      android:gravity="center_vertical"
-      android:visibility="visible">
-
+      android:layout_marginStart="50dp"
+      android:layout_marginEnd="@dimen/space_100"
+      android:background="@color/white">
 
       <com.mycity4kids.tagging.ui.RichEditorView
         android:id="@+id/typeHere"
@@ -64,98 +95,28 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/space_10"
+        android:background="@color/transparent"
         android:gravity="center_vertical"
-        android:layout_toStartOf="@id/disableStatePostTextView"
         android:hint="Write a comment"
         android:maxLines="4"
-        android:background="@color/transparent"
-        android:padding="8dp"
         android:textColor="#a1a4a8"
         android:textSize="18sp"
         android:visibility="visible"
         app:fontName="oswald.ttf" />
 
-      <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/beTheFirstOne"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="@dimen/space_10"
-        android:text="Be the first one"
-        android:textColor="@color/groups.grey"
-        android:textSize="12sp"
-        android:visibility="gone" />
-
-      <!-- <ImageView
-           android:id="@+id/audio"
-           android:layout_width="30dp"
-           android:layout_height="30dp"
-           android:layout_alignParentRight="true"
-           android:layout_centerVertical="true"
-           android:layout_marginRight="10dp"
-           android:padding="4dp"
-           app:srcCompat="@drawable/ic_audio_record" />-->
-
-
-      <!-- <ImageView
-           android:layout_width="30dp"
-           android:layout_height="30dp"
-           android:layout_alignParentRight="true"
-           android:layout_centerVertical="true"
-           android:layout_marginRight="40dp"
-           android:paddingTop="5dp"
-           android:paddingBottom="5dp"
-           android:src="@drawable/ic_add_image" />-->
-
-      <com.mycity4kids.widget.MomspressoButtonWidget
-        android:id="@+id/disableStatePostTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/space_10"
-        android:paddingStart="@dimen/space_20"
-        android:paddingTop="@dimen/space_10"
-        android:paddingEnd="@dimen/space_20"
-        android:paddingBottom="@dimen/space_10"
-        android:text="Post"
-        android:textStyle="bold"
-        app:fb_borderColor="#D8D8D8"
-        app:fb_borderWidth="1dp"
-        app:fb_defaultColor="@color/white_color"
-        app:fb_radius="@dimen/space_30"
-        app:fb_textColor="#D8D8D8"
-        app:fb_textSize="14sp" />
-      <com.mycity4kids.widget.MomspressoButtonWidget
-        android:id="@+id/enableStatePostTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/space_10"
-        android:paddingStart="@dimen/space_20"
-        android:paddingTop="@dimen/space_10"
-        android:paddingEnd="@dimen/space_20"
-        android:paddingBottom="@dimen/space_10"
-        android:text="Post"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:fb_borderColor="@color/app_red"
-        app:fb_borderWidth="1dp"
-        app:fb_defaultColor="@color/app_red"
-        app:fb_radius="@dimen/space_30"
-        app:fb_textColor="@color/white"
-        app:fb_textSize="14sp" />
-
     </RelativeLayout>
 
-
     <View
-
+      android:id="@+id/line"
       android:layout_width="match_parent"
-      android:layout_height=".5dp"
-      android:layout_marginBottom="81dp"
-      android:background="#99cecece" />
+      android:layout_height="1dp"
+      android:layout_below="@id/r"
+      android:background="#f0f0f0" />
+    <!-- <View
+
+       android:layout_width="match_parent"
+       android:layout_height=".5dp"
+       android:background="#99cecece" />-->
   </RelativeLayout>
   <com.mycity4kids.widget.CustomFontTextView
     android:id="@+id/noCommentsTextView"
