--- a/app/src/main/res/layout/more_from_author_sub_layout_article_detail_fragment.xml
+++ b/app/src/main/res/layout/more_from_author_sub_layout_article_detail_fragment.xml
@@ -71,7 +71,7 @@
           android:paddingEnd="5dp"
           android:paddingBottom="5dp"
           android:singleLine="true"
-          android:text="ABFhjdbfhjdsf jsbfjbsdf"
+          android:text=""
           android:textColor="@color/black"
           android:textSize="12sp"
           android:visibility="gone"
